Messing with css for responsive design ipad image stretching bug

--- a/static/dashboard.scss
+++ b/static/dashboard.scss
@@ -194,6 +194,7 @@ html, body {
       border-radius: 50%;
       margin-left: $columnSpacing;
       height: 100%;
+      max-height: 147px;
     }
     .h1-container {
       flex: 1.2 1 auto;
